--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     # 1. 前回実行日をartifactから取得
     - name: Download last_run_date artifact
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: last_run_date
       continue-on-error: true
@@ -38,6 +38,7 @@ jobs:
           echo "skip=false" >> $GITHUB_ENV
         fi
 
+    # 4. ワークフローの本体
     - name: checkout
       if: env.skip == 'false'
       uses: actions/checkout@v4
@@ -69,6 +70,18 @@ jobs:
     - name: Test
       if: env.skip == 'false'
       run: dotnet test --no-build --verbosity normal
+
+      # 5. 日付ファイルをartifactとして保存
+      - name: Save today's date as artifact
+        if: env.skip == 'false'
+        run: echo "$date" > last_run_date.txt
+
+      - name: Upload last_run_date artifact
+        if: env.skip == 'false'
+        uses: actions/upload-artifact@v4
+        with:
+          name: last_run_date
+          path: last_run_date.txt
 
     - name: clean up
       if: ${{ always() }}
