--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,9 +37,13 @@ jobs:
           $artifactId = $target.id
 
           # zipをダウンロードして展開
-          gh api "repos/$repo/actions/artifacts/$artifactId/zip" --output artifact.zip
-          Expand-Archive artifact.zip -DestinationPath .
-          Write-Host "Artifact downloaded and extracted."
+          gh api "repos/$repo/actions/artifacts/$artifactId/zip" > artifact.zip
+          if (Test-Path artifact.zip) {
+            Expand-Archive artifact.zip -DestinationPath .
+            Write-Host "Artifact downloaded and extracted."
+          } else {
+            Write-Host "artifact.zip not found. Download failed."
+          }
         }
         else {
           Write-Host "No previous artifact found."
@@ -91,38 +95,5 @@ jobs:
 
     - name: gclm setting
       if: env.skip == 'false'
-      env:
-        LICENSE_KEY: ${{ secrets.COMPONENTONEKEY }}
-      run: gclm "4327eaf8-aa02-40a6-b9f6-3d007c039055" -a "$env:LICENSE_KEY"
-
-    - name: Restore dependencies
-      if: env.skip == 'false'
-      run: dotnet restore
-
-    - name: Build
-      if: env.skip == 'false'
-      run: dotnet build --no-restore
-
-    - name: Test
-      if: env.skip == 'false'
-      run: dotnet test --no-build --verbosity normal
-
-    # 5. 今日の日付をartifactとして保存
-    - name: Save today's date as artifact
-      if: env.skip == 'false'
-      shell: pwsh
-      run: |
-        $env:date | Out-File -Encoding UTF8 -NoNewline last_run_date.txt
-
-    - name: Upload last_run_date artifact
-      if: env.skip == 'false'
-      uses: actions/upload-artifact@v4
-      with:
-        name: last_run_date
-        path: last_run_date.txt
-        retention-days: 3
-
-    # 6. クリーンアップ
-    - name: Clean up
-      if: always()
-      run: gclm "4327eaf8-aa02-40a6-b9f6-3d007c039055" -d
+     ](#)
+
