--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -128,5 +128,5 @@ jobs:
 
     # 6. クリーンアップ
     - name: Clean up
-      if: always()
+      if: always() && env.skip != 'true'
       run: gclm "4327eaf8-aa02-40a6-b9f6-3d007c039055" -d
