もう一度失敗

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -81,6 +81,7 @@ jobs:
     # 必ず失敗させたい
     - name: Always fail
       shell: pwsh
+      if: env.skip == 'false'
       run: |
         Write-Host "This step will always fail."
         exit 1
